# Job-Judge

./: .gitignore  Cargo.toml  README.MD  build.sh  clippy.toml  docker_push.sh  helm.sh  post_build.sh  rustfmt.toml  sample_helmconfig.yaml
.github/workflows/: build.yaml  lint.yaml
devops/: README.MD
devops/server/: data.js  index.js  package.json
devops/server/routers/: mode.js  pipeline.js  vm.js
helm/: Chart.yaml  values.yaml
helm/charts/containersvr/: Chart.yaml  values.yaml
helm/charts/containersvr/templates/: app.yaml
helm/charts/gateway/: Chart.yaml  values.yaml
helm/charts/gateway/templates/: app.yaml
helm/charts/idsvr/: Chart.yaml
helm/charts/idsvr/templates/: app.yaml
helm/charts/sdwp/: Chart.yaml  values.yaml
helm/charts/sdwp/templates/: app.yaml
helm/charts/sessionsvr/: Chart.yaml  values.yaml
helm/charts/sessionsvr/templates/: app.yaml
helm/charts/testsvr/: Chart.yaml  values.yaml
helm/charts/usersvr/: Chart.yaml  values.yaml
helm/charts/usersvr/templates/: app.yaml
helm/templates/: _helpers.tpl  config.yaml
server/: Dockerfile.template
server/cfg/: config.toml  etcd.toml
server/cgi/: Cargo.toml  build.rs
server/cgi/restapi/: judge.http  user.http
server/cgi/src/: main.rs  rpc.rs
server/cgi/src/api/: comm.rs  judge.rs  mod.rs  problem.rs  run.rs  user.rs
server/cgi/src/interface/: mod.rs
server/cgi/src/middleware/: logger.rs
server/compilationsrv/: Cargo.toml  build.rs
server/compilationsrv/compilation/: c.sh
server/compilationsrv/proto/: rpc.proto
server/compilationsrv/src/: main.rs  srv.rs
server/compilationsvr/: Cargo.toml
server/compilationsvr/compilation/: cpp.sh  java.sh
server/compilationsvr/proto/: rpc.proto
server/compilationsvr/src/: main.rs  svr.rs
server/config/: Cargo.toml
server/config/src/: lib.rs
server/containersvr/: Cargo.toml  build.rs
server/containersvr/proto/: rpc.proto
server/containersvr/src/: config.rs  daemon.rs  docker.rs  firecracker.rs  main.rs  mgr.rs  svr.rs
server/discover/: Cargo.toml
server/discover/src/: config.rs  k8s.rs  lib.rs
server/etcd/: README.MD
server/gateway/: Cargo.toml  build.rs
server/gateway/restapi/: comm.http  user.http
server/gateway/src/: main.rs  rpc.rs  util.rs
server/gateway/src/api/: comm.rs  mod.rs  user.rs
server/gateway/src/middleware/: auth.rs  logger.rs  mod.rs
server/idsvr/: Cargo.toml  build.rs
server/idsvr/proto/: rpc.proto  table.proto
server/idsvr/src/: main.rs  svr.rs  table.rs
server/judgesrv/: Cargo.toml  build.rs
server/judgesrv/proto/: rpc.proto
server/judgesrv/src/: main.rs  srv.rs
server/judgesvr/: Cargo.toml
server/judgesvr/proto/: rpc.proto
server/judgesvr/src/: main.rs  svr.rs
server/liblog/: Cargo.toml
server/liblog/src/: lib.rs
server/micro-service/: Cargo.toml  README.MD
server/micro-service/src/: cfg.rs  discover.rs  error.rs  lib.rs  log.rs  server.rs  server_info.rs  service.rs  util.rs
server/micro-service/src/discover/: config.rs  k8s.rs  mod.rs
server/micro-service/src/load_balancer/: mod.rs  random.rs
server/proto/: debug.proto  rpc.proto  rpc_comm.proto  runner.proto  token.proto  user.proto
server/reflection/: Cargo.toml  build.rs
server/reflection/proto/: reflection.proto
server/reflection/src/: client.rs  lib.rs  server.rs
server/runsvr/: Cargo.toml
server/sdwp/: Cargo.toml  build.rs
server/sdwp/restapi/: api.rest
server/sdwp/src/: cfg.rs  main.rs  token.rs
server/sdwp/src/grpc/: any_message.rs  mod.rs  reflection.rs
server/sdwp/src/middleware/: auth.rs  mod.rs  request_metrics.rs
server/sdwp/src/router/: mod.rs  request.rs  service.rs  user.rs
server/sdwp/web/: index.html  package.json  vite.config.js
server/sdwp/web/src/: App.jsx  Content.jsx  JsonView.jsx  NavHistory.jsx  NavList.jsx  NavSaved.jsx  Panel.jsx  QueryPage.jsx  Setting.jsx  Tab.jsx  api.js  config.js  index.css  index.jsx
server/sdwp/web/src/store/: index.js  ui.js
server/sessionsvr/: Cargo.toml  build.rs
server/sessionsvr/proto/: rpc.proto
server/sessionsvr/src/: main.rs  svr.rs
server/testsvr/: Cargo.toml  build.rs
server/testsvr/proto/: rpc.proto
server/testsvr/src/: main.rs  svr.rs
server/tokensvr/: Cargo.toml
server/tokensvr/proto/: rpc.proto
server/usersrv/: Cargo.toml
server/usersvr/: Cargo.toml  build.rs
server/usersvr/migrations/2020-06-06-174856_userdb/: down.sql  up.sql
server/usersvr/proto/: rpc.proto  table.proto
server/usersvr/src/: main.rs  svr.rs  utils.rs
web/: package.json
web/public/: index.html  manifest.json
web/src/: App.js
web/src/components/pubstruct/: main.js
