[package]
name = "cgi"
version = "0.1.0"
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2"
hyper = "0.13"
diesel = {version = "1.0", features = ["postgres"] }
protobuf = "2.12.0"
liblog = { path = "../liblog" }
actix-web = "2"
actix-rt = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
tonic-build = "0.2"