[package]
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"
name = "cgi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "3"
liblog = {path = "../liblog"}
protobuf = "2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = "0.2"

[build-dependencies]
tonic-build = "0.3"
