[package]
name = "compilationsvr"
version = "0.1.0"
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.2"
prost = "0.6"
log = "0.4"
liblog = { path = "../liblog" }
micro-service = { path = "../micro-service" }

[build-dependencies]
tonic-build = "0.2"