[package]
name = "config"
version = "0.1.0"
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
liblog = { path = "../liblog" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
