[package]
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"
name = "containersvr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.5"
lazy_static = "1.4"
liblog = {path = "../liblog"}
log = "0.4"
micro-service = {path = "../micro-service"}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "0.2", features = ["full"]}
toml = "0.5"
tonic = "0.2"

[build-dependencies]
tonic-build = "0.2"
