[package]
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"
name = "containersvr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
micro-service = {path = "../micro-service"}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}
toml = "0.5"
tonic = "0.6"
tonic-reflection = "0.3"
containerd-client = {version = "0.2", "features" = ["connect"]}
tokio-stream = {version = "0.1", features = ["net"]}
prost = "0.9"
prost-types = "0.9"
anyhow = "1"
serde_yaml = "0.8"
rand = "0.8"
petgraph = "0.6"

[build-dependencies]
tonic-build = "0.6"
