[package]
name = "discover"
version = "0.1.0"
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = {version = "1.0", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"
trust-dns-client = "0.20"