[package]
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"
name = "gateway"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-web = "4.0.0-beta.8"
actix-http = "3.0.0-beta.8"
micro-service = {path = "../micro-service"}
prost = "0.8"
protobuf = "2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
toml = "0.5"
tonic = "0.5"
futures = "0.3"
log = "0.4"
env_logger = "0.9"

[build-dependencies]
tonic-build = "0.5"
