[package]
name = "idsvr"
version = "0.1.0"
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
lazy_static = "1.4"
micro-service = {path = "../micro-service"}
log = "0.4"
env_logger = "0.9"
prost = "0.8"
tokio = {version = "1.0", features = ["full"]}
tokio-stream = {version = "0.1", features = ["net"]}
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
tonic = "0.5"
tonic-reflection = "0.2"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
futures = "0.3"

[build-dependencies]
tonic-build = "0.5"

