[package]
name = "liblog"
version = "0.1.0"
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = { version = "0.4", features = ["std"] }