[package]
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"
name = "micro-service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
backtrace = "0.3"
etcd-rs = "0.3"
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "0.2", features = ["full"]}
tonic = "0.3"
