[package]
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"
name = "micro-service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
rand = "0.8"
thiserror = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
tokio-stream = "0.1"
tonic = "0.4"
futures = "0.3"
