[package]
name = "reflection"
version = "0.1.0"
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0", features = ["full"]}
tonic = "0.4"
prost = "0.7"
http = "0.2"
prost-types = "0.7"
log = "0.4"

[build-dependencies]
tonic-build = "0.4"