[package]
name = "sdwp"
version = "0.1.0"
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"
description = "server debug web page"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-web = "4.0.0-beta.8"
anyhow = "1"
thiserror = "1"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
tonic = "0.5"
prost = "0.8"
prost-types = "0.8"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
rand = "0.8"
lazy_static = "1"
envy = "0.4"
discover = {path = "../discover"}
bytes = "1.0"
num = "0.4"
base64 = "0.13"

[build-dependencies]
tonic-build = "0.5"