[package]
name = "sessionsvr"
version = "0.1.0"
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
micro-service = {path = "../micro-service"}
log = "0.4"
env_logger = "0.8"
prost = "0.7"
tokio = {version = "1.0", features = ["full"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.4"
rand = "0.8"
jwt = "0.13"
hmac = "0.10"
sha2="0.9"
serde = {version = "1.0", features = ["derive"]}

[build-dependencies]
tonic-build = "0.4"

