[package]
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"
name = "usersvr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
lazy_static = "1.4"
micro-service = {path = "../micro-service"}
prost = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "0.2", features = ["full"]}
toml = "0.5"
tonic = "0.3"
sqlx = { version = "0.4", features = [ "runtime-tokio-rustls", "postgres" ] }
rand = "0.7"
sha2 = "0.9"
hex = "0.4"

[build-dependencies]
tonic-build = "0.3"
